// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatisticsSummary component renders the anomalous traffic percentage 1`] = `
<gl-single-stat-stub
  animationdecimalplaces="0"
  class="col-sm-6 col-md-4 col-lg-3"
  title="Anomalous"
  unit="%"
  value="20"
  variant="warning"
/>
`;

exports[`StatisticsSummary component renders the nominal traffic count 1`] = `
<gl-single-stat-stub
  animationdecimalplaces="0"
  class="col-sm-6 col-md-4 col-lg-3"
  title="Total"
  value="100"
  variant="muted"
/>
`;
